--- a/AngularExamples/AngularExample1_Kartvizit/src/app/cards/card-item/card-item.component.html
+++ b/AngularExamples/AngularExample1_Kartvizit/src/app/cards/card-item/card-item.component.html
@@ -1,19 +1,21 @@
 <mat-card class="example-card">
-    <mat-card-header>
+    <mat-card-header (click)="openUpdateCardModal(cardData)">
       <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title *ngIf="cardData.name">{{cardData.name}}</mat-card-title>
+      <mat-card-title *ngIf="">{{cardData.name}}</mat-card-title>
       <mat-card-subtitle>{{cardData.title}}</mat-card-subtitle>
     </mat-card-header>
     <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
     <mat-card-content>
         <ul class="list-group list-group-flush">
             <li class="list-group-item">{{cardData.phone}}</li>
-            <li class="list-group-item" *ngIf="cardData.email">{{cardData.email}}</li>
-            <li class="list-group-item"*ngIf="cardData.address">{{cardData.address}}</li>
+            <li class="list-group-item" *ngIf="cardData.email;else NoEmail">{{cardData.email}}</li>
+            <li class="list-group-item">
+              <span *ngIf="cardData.address">{{cardData.address}}</span>
+                 <small *ngIf="!cardData.address">adres girilmemiş</small></li>
           </ul>
+          <ng-template #NoEmail>
+            <small class="nocontent"> e posta adresi girilmemiş</small>
+          </ng-template>
     </mat-card-content>
-    <mat-card-actions>
-      <button mat-button>LIKE</button>
-      <button mat-button>SHARE</button>
-    </mat-card-actions>
+ 
   </mat-card>
