--- a/AngularExamples/AngularExample1_Kartvizit/src/app/cards/card-item/card-item.component.scss
+++ b/AngularExamples/AngularExample1_Kartvizit/src/app/cards/card-item/card-item.component.scss
@@ -8,3 +8,9 @@
     background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
     background-size: cover;
   }
+  .nocontent{
+    padding-left: 16px;
+  }
+    .mat-card-header{
+      cursor:pointer;
+    }
