--- a/AngularExamples/AngularExample1_Kartvizit/src/app/cards/cards.component.html
+++ b/AngularExamples/AngularExample1_Kartvizit/src/app/cards/cards.component.html
@@ -8,17 +8,16 @@
   </div>
   
     <hr>
-    <!-- <div class="card" style="width: 18rem;">
-       
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="/" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div> -->
+ 
      <div class="cards">
         <div class="row">
-            <div class="col-12 col-md-4 col-lg-3" *ngFor="let card of cards">
+          <div class="col-12" *ngIf="!cardService.cards">
+            <span>Kartvizitler Yükleniyor. Lütfen Bekleyiniz</span>
+          </div>
+          <div class="col-12" *ngIf="cardService.cards?.length===0">
+            <span>Henüz kartvizit eklemediniz <a class="text-primary" (click)="openAddCardModal">Buraya tıklayarak</a> ekleme yapabilirsiniz</span>
+          </div>
+            <div class="col-12 col-md-4 col-lg-3" *ngFor="let card of cardService.cards">
               <app-card-item [cardData]="card"></app-card-item>   
             </div>
             
