--- a/ETicaret/AngularClient/src/app/admin/layout/components/sidebar/sidebar.component.html
+++ b/ETicaret/AngularClient/src/app/admin/layout/components/sidebar/sidebar.component.html
@@ -1,1 +1,7 @@
-<p>sidebar works!</p>
+
+<mat-selection-list [multiple]="false" class="sidebarlist">
+  <mat-list-option role="listitem" routerLink="/admin">Dashboard</mat-list-option>
+    <mat-list-option  role="listitem" routerLink="customers">Customers</mat-list-option >
+    <mat-list-option  role="listitem" routerLink="products">Products</mat-list-option >
+    <mat-list-option  role="listitem" routerLink="orders">Orders</mat-list-option >
+  </mat-selection-list>
